--- a/border.html
+++ b/border.html
@@ -12,7 +12,7 @@
             margin: auto;
             border: 1px solid black;
             text-align: center;
-            border-collapse: collapse; 
+            border-spacing: 10px;
         }
         
     </style>
